force-app/main/default/objects/Donprotocolairesiege__c/Donprotocolairesiege__c.object-meta.xml
<CustomObject>
    <label>Don</label>
    <nameField>
        <displayFormat>Don{0000}</displayFormat>
        <label>Numéro Don</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>