force-app/main/default/objects/Donprotocolairesiege__c/fields/Ad_nom_R__c.field-meta.xml
<CustomField>
    <fullName>Ad_nom_R__c</fullName>
    <formula>&apos;Délégué régional de la &apos; + DL_DT__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad nom R</label>
    <type>Text</type>
</CustomField>