force-app/main/default/objects/Donprotocolairesiege__c/fields/Adapt_name_resp__c.field-meta.xml
<CustomField>
    <fullName>Adapt_name_resp__c</fullName>
    <formula>IF( AND ( BEGINS( DL_DT__r.Name , &apos;Délégation&apos;),BEGINS( MID(DL_DT__r.Name, 12, 5) ,&apos;A&apos;)) ,&quot;délégué régional d&apos;&quot; &amp; MID(DL_DT__r.Name, 12, 20) ,
IF( AND ( BEGINS( DL_DT__r.Name , &apos;Délégation&apos;),BEGINS( MID(DL_DT__r.Name, 12, 5) ,&apos;O&apos;)) ,&quot;délégué régional d&apos;&quot; &amp; MID(DL_DT__r.Name, 12, 20),

IF( BEGINS( DL_DT__r.Name , &apos;Délégation&apos;),&apos;délégué régional de &apos;&amp; MID(DL_DT__r.Name, 12, 20),



IF( BEGINS( DL_DT__r.Name , &apos;Direction Territoriale Ile&apos;) ,&apos;directeur territorial &apos;&amp; MID(DL_DT__r.Name, 24, 26),




IF( BEGINS( DL_DT__r.Name , &apos;Direction Territoriale Paris&apos;) ,&apos;directeur territorial de Paris&apos;,&apos;&apos;

)






 ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adapt name resp</label>
    <type>Text</type>
</CustomField>