force-app/main/default/objects/Donprotocolairesiege__c/fields/Adapt_nb_seance__c.field-meta.xml
<CustomField>
    <fullName>Adapt_nb_seance__c</fullName>
    <formula>IF(  Nombre_de_s_ances__c &gt;1 ,&apos;des séances que vous avez organisées les &apos; ,&apos;de la séance que vous avez organisée le &apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adapt nb seance</label>
    <type>Text</type>
</CustomField>