force-app/main/default/objects/Donprotocolairesiege__c/fields/Adapt_nom_resp__c.field-meta.xml
<CustomField>
    <fullName>Adapt_nom_resp__c</fullName>
    <label>Adapt nom resp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>