force-app/main/default/objects/Donprotocolairesiege__c/fields/Adapt_seance__c.field-meta.xml
<CustomField>
    <fullName>Adapt_seance__c</fullName>
    <formula>IF( ISPICKVAL( Nature_de_la_s_ance__c , &apos;Manifestation&apos;)  ,&apos;de la manifestation que vous avez organisée &apos;  , &apos;du &apos;&amp;  LOWER(TEXT(Nature_de_la_s_ance__c) )&amp;&apos; que vous avez organisé &apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adapt seance</label>
    <type>Text</type>
</CustomField>