force-app/main/default/objects/Donprotocolairesiege__c/fields/Causes__c.field-meta.xml
<CustomField>
    <fullName>Causes__c</fullName>
    <label>Causes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enfance et jeunesse</fullName>
            </value>
            <value>
                <fullName>Grand âge</fullName>
            </value>
            <value>
                <fullName>Handicap</fullName>
            </value>
            <value>
                <fullName>Lutte contre le Sida</fullName>
            </value>
            <value>
                <fullName>Précarité</fullName>
            </value>
            <value>
                <fullName>Recherche médicale</fullName>
            </value>
            <value>
                <fullName>Situations d&apos;urgence</fullName>
            </value>
            <value>
                <fullName>Soutien aux communautés locales</fullName>
            </value>
            <value>
                <fullName>Soutien aux malades</fullName>
            </value>
            <value>
                <fullName>Urgences (attentats, catastrophes naturelles)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>