force-app/main/default/objects/Donprotocolairesiege__c/fields/Civilit__c.field-meta.xml
<CustomField>
    <fullName>Civilit__c</fullName>
    <label>Civilité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madame</fullName>
            </value>
            <value>
                <fullName>Monsieur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>