force-app/main/default/objects/Donprotocolairesiege__c/fields/Cl_tur__c.field-meta.xml
<CustomField>
    <fullName>Cl_tur__c</fullName>
    <label>STATUT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Chèque envoyé</fullName>
            </value>
            <value>
                <fullName>Don refusé</fullName>
                <label>Refus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>