force-app/main/default/objects/Donprotocolairesiege__c/fields/Commentaires_dossiers__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_dossiers__c</fullName>
    <label>Commentaires</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>