force-app/main/default/objects/Donprotocolairesiege__c/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <label>CP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>