force-app/main/default/objects/Donprotocolairesiege__c/fields/D_cisionDL__c.field-meta.xml
<CustomField>
    <fullName>D_cisionDL__c</fullName>
    <label>Décision DL/DT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Accord</fullName>
            </value>
            <value>
                <fullName>Refus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>