force-app/main/default/objects/Donprotocolairesiege__c/fields/Date_actuelle__c.field-meta.xml
<CustomField>
    <fullName>Date_actuelle__c</fullName>
    <formula>TEXT(DAY( TODAY())) + &apos; &apos; + CASE( MONTH( TODAY() ), 1, &quot;Janvier&quot;, 2, &quot;Février&quot;, 3, &quot;Mars&quot;, 4, &quot;Avril&quot;, 5, &quot;Mai&quot;, 6, &quot;Juin&quot;, 7, &quot;Juillet&quot;, 8, &quot;Aout&quot;, 9, &quot;Septembre&quot;, 10, &quot;Octobre&quot;, 11, &quot;Novembre&quot;, 12, &quot;Décembre&quot;, &quot;-&quot; )
+ &apos; &apos; + TEXT(YEAR( TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date actuelle</label>
    <type>Text</type>
</CustomField>