force-app/main/default/objects/Donprotocolairesiege__c/fields/Date_concern_e__c.field-meta.xml
<CustomField>
    <fullName>Date_concern_e__c</fullName>
    <label>Événement : 1 Date concernée</label>
    <required>true</required>
    <type>Date</type>
</CustomField>