force-app/main/default/objects/Donprotocolairesiege__c/fields/Date_Cr_ation_Don__c.field-meta.xml
<CustomField>
    <fullName>Date_Cr_ation_Don__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de Traitement</label>
    <type>Date</type>
</CustomField>