force-app/main/default/objects/Donprotocolairesiege__c/fields/Date_de_r_glement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_r_glement__c</fullName>
    <label>Date de règlement des droits d&apos;auteur</label>
    <required>true</required>
    <type>Date</type>
</CustomField>