force-app/main/default/objects/Donprotocolairesiege__c/fields/Date_Don__c.field-meta.xml
<CustomField>
    <fullName>Date_Don__c</fullName>
    <formula>YEAR( DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Don</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>