force-app/main/default/objects/Donprotocolairesiege__c/fields/Date_Proposition_Pilotage__c.field-meta.xml
<CustomField>
    <fullName>Date_Proposition_Pilotage__c</fullName>
    <label>Date Proposition Pilotage</label>
    <type>DateTime</type>
</CustomField>