force-app/main/default/objects/Donprotocolairesiege__c/fields/Date_Validation_ND__c.field-meta.xml
<CustomField>
    <fullName>Date_Validation_ND__c</fullName>
    <label>Date Validation ND</label>
    <type>DateTime</type>
</CustomField>