force-app/main/default/objects/Donprotocolairesiege__c/fields/DL_DT__c.field-meta.xml
<CustomField>
    <fullName>DL_DT__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DL/DT</label>
    <referenceTo>D_l_gation__c</referenceTo>
    <relationshipLabel>Dons</relationshipLabel>
    <relationshipName>Dons</relationshipName>
    <type>Lookup</type>
</CustomField>