force-app/main/default/objects/Donprotocolairesiege__c/fields/Don_Cl_tur__c.field-meta.xml
<CustomField>
    <fullName>Don_Cl_tur__c</fullName>
    <formula>TEXT(Cl_tur__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Don Clôturé</label>
    <type>Text</type>
</CustomField>