force-app/main/default/objects/Donprotocolairesiege__c/fields/Don_cloture__c.field-meta.xml
<CustomField>
    <fullName>Don_cloture__c</fullName>
    <label>Don Clôturé</label>
    <length>30</length>
    <type>Text</type>
</CustomField>