force-app/main/default/objects/Donprotocolairesiege__c/fields/DOSSIER_COMPLET__c.field-meta.xml
<CustomField>
    <fullName>DOSSIER_COMPLET__c</fullName>
    <label>DOSSIER COMPLET</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>