force-app/main/default/objects/Donprotocolairesiege__c/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <formula>DL_DT__r.DR__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR</label>
    <type>Text</type>
</CustomField>