force-app/main/default/objects/Donprotocolairesiege__c/fields/Droits_hauteur_HT__c.field-meta.xml
<CustomField>
    <fullName>Droits_hauteur_HT__c</fullName>
    <label>Droits hauteur HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>