force-app/main/default/objects/Donprotocolairesiege__c/fields/F_d_ration_concern_e__c.field-meta.xml
<CustomField>
    <fullName>F_d_ration_concern_e__c</fullName>
    <label>Fédération concernée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMF</fullName>
            </value>
            <value>
                <fullName>FFAO</fullName>
            </value>
            <value>
                <fullName>ACJ</fullName>
            </value>
            <value>
                <fullName>FNSPF</fullName>
            </value>
            <value>
                <fullName>Non Adhérent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>