force-app/main/default/objects/Donprotocolairesiege__c/fields/formattedDateeven2Protocolaire__c.field-meta.xml
<CustomField>
    <fullName>formattedDateeven2Protocolaire__c</fullName>
    <formula>TEXT(DAY(  v_nement_2_Date_concern_e__c )) + &apos; &apos; + CASE( MONTH( v_nement_2_Date_concern_e__c ), 1, &quot;Janvier&quot;, 2, &quot;Février&quot;, 3, &quot;Mars&quot;, 4, &quot;Avril&quot;, 5, &quot;Mai&quot;, 6, &quot;Juin&quot;, 7, &quot;Juillet&quot;, 8, &quot;Aout&quot;, 9, &quot;Septembre&quot;, 10, &quot;Octobre&quot;, 11, &quot;Novembre&quot;, 12, &quot;Décembre&quot;, &quot;-&quot; )
+ &apos; &apos; + TEXT(YEAR(v_nement_2_Date_concern_e__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formattedDateeven2Protocolaire</label>
    <type>Text</type>
</CustomField>