force-app/main/default/objects/Donprotocolairesiege__c/fields/Get_date_validation_CC__c.field-meta.xml
<CustomField>
    <fullName>Get_date_validation_CC__c</fullName>
    <label>Date Validation chargé de clientèle</label>
    <type>DateTime</type>
</CustomField>