force-app/main/default/objects/Donprotocolairesiege__c/fields/Get_DL__c.field-meta.xml
<CustomField>
    <fullName>Get_DL__c</fullName>
    <formula>IF(   UO_DL__c  = $User.Division , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get DL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>