force-app/main/default/objects/Donprotocolairesiege__c/fields/get_last_modified_date_valdation_dldt__c.field-meta.xml
<CustomField>
    <fullName>get_last_modified_date_valdation_dldt__c</fullName>
    <label>Date Validation DL/DT</label>
    <type>DateTime</type>
</CustomField>