force-app/main/default/objects/Donprotocolairesiege__c/fields/Get_type__c.field-meta.xml
<CustomField>
    <fullName>Get_type__c</fullName>
    <formula>TEXT( Type_Don__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get type</label>
    <type>Text</type>
</CustomField>