force-app/main/default/objects/Donprotocolairesiege__c/fields/getcloture__c.field-meta.xml
<CustomField>
    <fullName>getcloture__c</fullName>
    <formula>TEXT(Cl_tur__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>getcloture</label>
    <type>Text</type>
</CustomField>