force-app/main/default/objects/Donprotocolairesiege__c/fields/getdirectionstatus__c.field-meta.xml
<CustomField>
    <fullName>getdirectionstatus__c</fullName>
    <formula>TEXT (D_cisiondirection__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>getdirectionstatus</label>
    <type>Text</type>
</CustomField>