force-app/main/default/objects/Donprotocolairesiege__c/fields/GetIdND__c.field-meta.xml
<CustomField>
    <fullName>GetIdND__c</fullName>
    <formula>Note_de_D_pense__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GetIdND</label>
    <type>Text</type>
</CustomField>