force-app/main/default/objects/Donprotocolairesiege__c/fields/Lettre_Organisateur_g_n_r_e__c.field-meta.xml
<CustomField>
    <fullName>Lettre_Organisateur_g_n_r_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lettre Organisateur générée</label>
    <type>Checkbox</type>
</CustomField>