force-app/main/default/objects/Donprotocolairesiege__c/fields/Libelle_Forme_Juridique__c.field-meta.xml
<CustomField>
    <fullName>Libelle_Forme_Juridique__c</fullName>
    <formula>Organisateur__r.Libelle_Forme_Juridique__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libelle Forme Juridique</label>
    <type>Text</type>
</CustomField>