force-app/main/default/objects/Donprotocolairesiege__c/fields/Lieu2__c.field-meta.xml
<CustomField>
    <fullName>Lieu2__c</fullName>
    <label>Lieu</label>
    <length>100</length>
    <type>Text</type>
</CustomField>