force-app/main/default/objects/Donprotocolairesiege__c/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <label>Lieu</label>
    <length>100</length>
    <type>Text</type>
</CustomField>