force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_des_droits__c.field-meta.xml
<CustomField>
    <fullName>Montant_des_droits__c</fullName>
    <label>Montant global des droits d&apos;auteur HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>