force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_Don__c.field-meta.xml
<CustomField>
    <fullName>Montant_Don__c</fullName>
    <formula>IF( Montant_du_Don_HT__c &gt; 500 , &apos;Dons &gt; 500 €&apos;, &apos;Dons &lt;= 500 €&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Don</label>
    <type>Text</type>
</CustomField>