force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_du_Don__c.field-meta.xml
<CustomField>
    <fullName>Montant_du_Don__c</fullName>
    <label>Montant du Don</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dons de moins de 500€</fullName>
                <label>Dons &lt;= 500€</label>
            </value>
            <value>
                <fullName>Dons de plus de 500 €</fullName>
                <label>Dons &gt; 500 €</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>