force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_du_Don_HT__c.field-meta.xml
<CustomField>
    <fullName>Montant_du_Don_HT__c</fullName>
    <label>Montant du Don</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>