force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_du_don_propos_par_DL_DT__c.field-meta.xml
<CustomField>
    <fullName>Montant_du_don_propos_par_DL_DT__c</fullName>
    <formula>IF(  ISPICKVAL( Type_Don__c ,&quot;Protocolaire&quot;) ,   Montant_global_du_don_HTprotocolaire__c , Montantdudon__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant du don proposé par DL/DT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>