force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_global_des_droits_d_auteur_HT__c.field-meta.xml
<CustomField>
    <fullName>Montant_global_des_droits_d_auteur_HT__c</fullName>
    <formula>IF(  ISPICKVAL( Type_Don__c , &apos;Protocolaire&apos;) , Montant_des_droits_d_auteur_HT1__c + Montant_des_droits_d_auteur_HT2__c, Montant_des_droits_d_auteur_HT1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant global des droits d&apos;auteur HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>