force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_global_des_factures_HT__c.field-meta.xml
<CustomField>
    <fullName>Montant_global_des_factures_HT__c</fullName>
    <label>Montant global des factures HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>