force-app/main/default/objects/Donprotocolairesiege__c/fields/Montant_global_du_don_HTprotocolaire__c.field-meta.xml
<CustomField>
    <fullName>Montant_global_du_don_HTprotocolaire__c</fullName>
    <formula>IF(  OR(ISPICKVAL( F_d_ration_concern_e__c , &quot;CMF&quot; ),ISPICKVAL( F_d_ration_concern_e__c , &quot;FFAO&quot; ))  , 50* Montant_global_des_droits_d_auteur_HT__c/100, IF(AND(ISPICKVAL( F_d_ration_concern_e__c , &quot;ACJ&quot;  ), NOT(ISPICKVAL( F_d_ration_concern_e__c , &quot;CMF&quot;  )) ,NOT(ISPICKVAL( F_d_ration_concern_e__c , &quot;FFAO&quot;  ))) , 50*  MAX( Montant_des_droits_d_auteur_HT1__c, Montant_des_droits_d_auteur_HT2__c  ) /100, 30*  MAX( Montant_des_droits_d_auteur_HT1__c, Montant_des_droits_d_auteur_HT2__c  ) /100) 



 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant global du don</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>