force-app/main/default/objects/Donprotocolairesiege__c/fields/Montantdudon__c.field-meta.xml
<CustomField>
    <fullName>Montantdudon__c</fullName>
    <formula>IF( ISPICKVAL(Pourcentage_proposition__c, &quot;50&quot;)  , Montant_des_droits__c   *  50  / 100,  Montant_des_droits__c * 30 / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant global du don</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>