force-app/main/default/objects/Donprotocolairesiege__c/fields/name_letter__c.field-meta.xml
<CustomField>
    <fullName>name_letter__c</fullName>
    <formula>&apos;Lettre_Organisateur_&apos;+Note_de_D_pense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nom lettre</label>
    <type>Text</type>
</CustomField>