force-app/main/default/objects/Donprotocolairesiege__c/fields/Nature_de_la_s_ance__c.field-meta.xml
<CustomField>
    <fullName>Nature_de_la_s_ance__c</fullName>
    <label>Nature de la séance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>concert</fullName>
                <label>Concert et spectacle de variétés/kermesse</label>
            </value>
            <value>
                <fullName>Bal, soirée dansante</fullName>
            </value>
            <value>
                <fullName>Repas en musique</fullName>
            </value>
            <value>
                <fullName>Festival</fullName>
            </value>
            <value>
                <fullName>Manifestation</fullName>
                <label>Manifestation (autre)</label>
            </value>
            <value>
                <fullName>Manifestations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>