force-app/main/default/objects/Donprotocolairesiege__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <label>Nom du responsable</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>