force-app/main/default/objects/Donprotocolairesiege__c/fields/Nom_utilisateur__c.field-meta.xml
<CustomField>
    <fullName>Nom_utilisateur__c</fullName>
    <formula>IF( CreatedById= $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom utilisateur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>