force-app/main/default/objects/Donprotocolairesiege__c/fields/Nombre_de_s_ances__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_s_ances__c</fullName>
    <formula>IF( ISBLANK( v_nement_2_Date_concern_e__c ) , 1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de séances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>