force-app/main/default/objects/Donprotocolairesiege__c/fields/Note_de_D_pense__c.field-meta.xml
<CustomField>
    <fullName>Note_de_D_pense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Note de Dépense</label>
    <referenceTo>ND__c</referenceTo>
    <relationshipLabel>Dons</relationshipLabel>
    <relationshipName>Dons</relationshipName>
    <type>Lookup</type>
</CustomField>