force-app/main/default/objects/Donprotocolairesiege__c/fields/Numwebdr__c.field-meta.xml
<CustomField>
    <fullName>Numwebdr__c</fullName>
    <formula>Organisateur__r.refclient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro interlocuteur WEBDR</label>
    <type>Text</type>
</CustomField>