force-app/main/default/objects/Donprotocolairesiege__c/fields/Observationsdirection__c.field-meta.xml
<CustomField>
    <fullName>Observationsdirection__c</fullName>
    <label>Observations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>