force-app/main/default/objects/Donprotocolairesiege__c/fields/ObservationsDL__c.field-meta.xml
<CustomField>
    <fullName>ObservationsDL__c</fullName>
    <label>Observations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>