force-app/main/default/objects/Donprotocolairesiege__c/fields/Ordrecheque__c.field-meta.xml
<CustomField>
    <fullName>Ordrecheque__c</fullName>
    <formula>DL_DT__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordre</label>
    <type>Text</type>
</CustomField>