force-app/main/default/objects/Donprotocolairesiege__c/fields/Organisateur__c.field-meta.xml
<CustomField>
    <fullName>Organisateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisateur</label>
    <referenceTo>Organisateur__c</referenceTo>
    <relationshipLabel>Dons</relationshipLabel>
    <relationshipName>Dons</relationshipName>
    <type>Lookup</type>
</CustomField>