force-app/main/default/objects/Donprotocolairesiege__c/fields/party_number__c.field-meta.xml
<CustomField>
    <fullName>party_number__c</fullName>
    <formula>Organisateur__r.refclient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>party_number</label>
    <type>Text</type>
</CustomField>