force-app/main/default/objects/Donprotocolairesiege__c/fields/pass_pilotage__c.field-meta.xml
<CustomField>
    <fullName>pass_pilotage__c</fullName>
    <label>pass_pilotage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>