force-app/main/default/objects/Donprotocolairesiege__c/fields/Pi_ces_Jointes__c.field-meta.xml
<CustomField>
    <fullName>Pi_ces_Jointes__c</fullName>
    <label>Pièces Jointes</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Etat des recettes et dépenses</fullName>
            </value>
            <value>
                <fullName>demande autorisation</fullName>
                <label>Demande d’autorisation</label>
            </value>
            <value>
                <fullName>Contrat général de représentation</fullName>
            </value>
            <value>
                <fullName>Bilan détaillé manifestation</fullName>
            </value>
            <value>
                <fullName>Demande écrite de don jointe</fullName>
            </value>
            <value>
                <fullName>Factures de l&apos;année écoulée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>