force-app/main/default/objects/Donprotocolairesiege__c/fields/Pourcentage_du_don_doit_tre_ramen_e__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_du_don_doit_tre_ramen_e__c</fullName>
    <formula>IF( ISPICKVAL( Type_Don__c , &apos;Protocolaire&apos;), ( Proposition_du_DL_doit_tre_ramen_e__c /


IF(  OR(ISPICKVAL( F_d_ration_concern_e__c , &quot;CMF&quot; ),ISPICKVAL( F_d_ration_concern_e__c , &quot;FFAO&quot; ))  ,  Montant_global_des_droits_d_auteur_HT__c, IF(AND(ISPICKVAL( F_d_ration_concern_e__c , &quot;ACJ&quot;  ), NOT(ISPICKVAL( F_d_ration_concern_e__c , &quot;CMF&quot;  )) ,NOT(ISPICKVAL( F_d_ration_concern_e__c , &quot;FFAO&quot;  ))) ,  MAX( Montant_des_droits_d_auteur_HT1__c, Montant_des_droits_d_auteur_HT2__c  ) ,   MAX( Montant_des_droits_d_auteur_HT1__c, Montant_des_droits_d_auteur_HT2__c  ) ) )










)   , 



( Proposition_du_DL_doit_tre_ramen_e__c / Montant_des_droits__c )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pourcentage du don doit être ramené à</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>