force-app/main/default/objects/Donprotocolairesiege__c/fields/Pourcentage_proposition__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_proposition__c</fullName>
    <label>Pourcentage du don</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <label>30%</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>