force-app/main/default/objects/Donprotocolairesiege__c/fields/Pr_nom__c.field-meta.xml
<CustomField>
    <fullName>Pr_nom__c</fullName>
    <label>Prénom du responsable</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>