force-app/main/default/objects/Donprotocolairesiege__c/fields/Profile_Cr_ation__c.field-meta.xml
<CustomField>
    <fullName>Profile_Cr_ation__c</fullName>
    <label>Profil Création</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargé Clientèle</fullName>
            </value>
            <value>
                <fullName>Pilotage réseau</fullName>
            </value>
            <value>
                <fullName>Directeur DL/DT</fullName>
            </value>
            <value>
                <fullName>Direction réseau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>