force-app/main/default/objects/Donprotocolairesiege__c/fields/Proposition_du_DL_doit_tre_ramen_e__c.field-meta.xml
<CustomField>
    <fullName>Proposition_du_DL_doit_tre_ramen_e__c</fullName>
    <label>Montant du don doit être ramené à</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>