force-app/main/default/objects/Donprotocolairesiege__c/fields/Somme_des_pourcentages_des_Dons__c.field-meta.xml
<CustomField>
    <fullName>Somme_des_pourcentages_des_Dons__c</fullName>
    <label>Somme des pourcentages des Dons</label>
    <summarizedField>B_n_ficiaire__c.Part_du_Don__c</summarizedField>
    <summaryForeignKey>B_n_ficiaire__c.Don__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>