force-app/main/default/objects/Donprotocolairesiege__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>PROPOSITION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Accord</fullName>
            </value>
            <value>
                <fullName>Refus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>